--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🚂 Revezamento Turma B</title>
-  <p class="quantidade-equipes">Quantidade de equipes: <span id="contadorPessoas">0</span></p>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   
   <!-- CSS personalizado -->
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .quantidade-equipes {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #555;
+      margin-top: -0.3rem;
+      margin-bottom: 1rem;
+      font-weight: 500;
+    }
+  </style>
 </head>
 
 <body class="container py-4">
   <h1 class="fw-bold logo">🚂 Revezamento Turma B</h1>
+  <p class="quantidade-equipes">Quantidade de equipes: <span id="contadorPessoas">0</span></p>
 
   <form id="formPessoa" class="mb-4">
     <input type="text" name="nome" class="form-control" placeholder="Nome" required autocomplete="off" />
@@ -55,21 +65,12 @@
           const tbody = document.getElementById('tabelaCorpo');
           tbody.innerHTML = '';
 
+          // Atualiza contador de pessoas
+          document.getElementById('contadorPessoas').textContent = data.length;
+
           function formatarHora(hora) {
             if (!hora) return '-';
-
-            // Remove AM/PM se houver
-            hora = hora.replace(/\s?(AM|PM)$/i, '');
-
-            // Divide e pega hora:minuto
-            let [hh, mm, ss] = hora.split(':');
-            let horaSemSegundos = `${hh}:${mm}`;
-
-            if (window.innerWidth > 450 && ss !== undefined) {
-              return `${horaSemSegundos}<span class='segundos'>:${ss}</span>`;
-            }
-
-            return horaSemSegundos;
+            return hora.replace(/(\d{2}:\d{2})(:\d{2})/, "$1<span class='segundos'>$2</span>");
           }
 
           data.forEach(p => {
@@ -127,6 +128,7 @@
       fetch('/limpar', { method: 'POST' }).then(carregarPessoas);
     }
 
+    // Função para editar o campo local inline
     function editarLocal(span, id) {
       const locais = ["X6", "X5", "PIAL/OFC", "VV"];
       const currentLocal = span.textContent;
