--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,8 @@
           <th>Status</th>
           <th>Nome</th>
           <th>Local</th>
-          <th>Hora Início</th>
-          <th>Hora Final</th>
+          <th>Início</th>
+          <th>Final</th>
           <th>Ações</th>
         </tr>
       </thead>
