--- a/public/index.html
+++ b/public/index.html
@@ -1,109 +1,224 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Revezamento Turma B</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>🚂 Revezamento Turma B</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
   <style>
-    .status {
-      font-size: 1.5rem;
+    .quantidade-equipes {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #555;
+      margin-top: -0.3rem;
+      margin-bottom: 1rem;
+      font-weight: 500;
     }
-    td input[type="time"] {
-      width: 100px;
+    .segundos {
+      font-size: 0.8em;
+      color: #888;
+    }
+    input.time-edit {
+      width: 80px;
+      text-align: center;
+      font-size: 0.9rem;
     }
   </style>
 </head>
-<body class="p-4">
 
-  <div class="container">
-    <h1 class="mb-4">Revezamento Turma B</h1>
+<body class="container py-4">
+  <h1 class="fw-bold logo">🚂 Revezamento Turma B</h1>
+  <p class="quantidade-equipes">Quantidade de equipes: <span id="contadorPessoas">0</span></p>
 
-    <table class="table table-bordered text-center align-middle">
+  <form id="formPessoa" class="mb-4">
+    <input type="text" name="nome" class="form-control" placeholder="Nome" required autocomplete="off" />
+    <select name="local" id="local" class="form-select" required>
+      <option value="" disabled selected>Selecione o local</option>
+      <option value="X6">X6</option>
+      <option value="X5">X5</option>
+      <option value="PIAL/OFC">PIAL/OFC</option>
+      <option value="VV">VV</option>
+    </select>
+    <button class="btn btn-success" type="submit">Adicionar</button>
+    <button type="button" onclick="limparDados()" class="btn btn-outline-danger">Limpar</button>
+  </form>
+
+  <div class="table-responsive">
+    <table class="table table-bordered table-hover align-middle text-center">
       <thead>
         <tr>
-          <th>Nome</th>
-          <th>Hora Início</th>
-          <th>Hora Fim</th>
           <th>Status</th>
+          <th>Nome</th>
+          <th>Local</th>
+          <th>Início</th>
+          <th>Final</th>
+          <th>Ações</th>
         </tr>
       </thead>
-      <tbody id="tabela">
-        <!-- Exemplo de linha com dados dinâmicos -->
-        <!-- Essas linhas serão geradas dinamicamente no servidor -->
-        <tr>
-          <td>Jefferson</td>
-          <td class="hora_inicio" data-id="1">10:30</td>
-          <td class="hora_fim" data-id="1">11:45</td>
-          <td class="status">🟢</td>
-        </tr>
-        <tr>
-          <td>Maria</td>
-          <td class="hora_inicio" data-id="2">11:00</td>
-          <td class="hora_fim" data-id="2">12:15</td>
-          <td class="status">🔴</td>
-        </tr>
-        <!-- Adicione mais conforme necessário -->
-      </tbody>
+      <tbody id="tabelaCorpo"></tbody>
     </table>
   </div>
 
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      function ativarEdicao(selector, campo) {
-        document.querySelectorAll(selector).forEach(el => {
-          el.addEventListener('click', () => {
-            const id = el.dataset.id;
-            const valorAtual = el.textContent.trim();
+    function carregarPessoas() {
+      fetch('/pessoas')
+        .then(res => res.json())
+        .then(data => {
+          const tbody = document.getElementById('tabelaCorpo');
+          tbody.innerHTML = '';
+          document.getElementById('contadorPessoas').textContent = data.length;
 
-            const input = document.createElement('input');
-            input.type = 'time';
-            input.value = valorAtual !== '-' ? valorAtual : '';
-            input.classList.add('form-control');
+          function formatarHora(hora) {
+            if (!hora) return '-';
+            return hora.replace(/(\d{2}:\d{2})(:\d{2})/, "$1<span class='segundos'>$2</span>");
+          }
 
-            el.innerHTML = '';
-            el.appendChild(input);
-            input.focus();
+          data.forEach(p => {
+            const tr = document.createElement('tr');
 
-            input.addEventListener('blur', () => salvar(input.value, id, campo, el));
-            input.addEventListener('keydown', e => {
-              if (e.key === 'Enter') {
-                e.preventDefault();
-                input.blur();
-              }
-            });
+            tr.innerHTML = `
+              <td class="status">${p.status}</td>
+              <td>${p.nome}</td>
+              <td class="${p.local === 'PIAL/OFC' ? 'local-pial-ofc' : ''}">
+                <span class="local-display" onclick="editarLocal(this, ${p.id})">${p.local}</span>
+              </td>
+              <td><span class="editable-time" onclick="editarHora(this, ${p.id}, 'hora_inicio')">${formatarHora(p.hora_inicio)}</span></td>
+              <td><span class="editable-time" onclick="editarHora(this, ${p.id}, 'hora_fim')">${formatarHora(p.hora_fim)}</span></td>
+              <td>
+                <button class="btn btn-warning btn-sm" onclick="iniciar(${p.id})">Iniciar</button>
+                <button class="btn btn-danger btn-sm" onclick="excluir(${p.id})">Excluir</button>
+              </td>
+            `;
+            tbody.appendChild(tr);
           });
         });
-      }
+    }
 
-      function salvar(valor, id, campo, tdElement) {
-        const linha = tdElement.parentElement;
-        const inicioEl = linha.querySelector('.hora_inicio');
-        const fimEl = linha.querySelector('.hora_fim');
-        const idPessoa = tdElement.dataset.id;
+    document.getElementById('formPessoa').addEventListener('submit', e => {
+      e.preventDefault();
+      const form = new FormData(e.target);
+      fetch('/adicionar', {
+        method: 'POST',
+        body: new URLSearchParams(form)
+      }).then(() => {
+        e.target.reset();
+        carregarPessoas();
+      });
+    });
 
-        const hora_inicio = (campo === 'hora_inicio') ? valor : inicioEl.textContent.trim();
-        const hora_fim = (campo === 'hora_fim') ? valor : fimEl.textContent.trim();
+    function iniciar(id) {
+      fetch('/iniciar', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ id })
+      }).then(carregarPessoas);
+    }
 
+    function excluir(id) {
+      fetch('/excluir', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ id })
+      }).then(carregarPessoas);
+    }
+
+    function limparDados() {
+      fetch('/limpar', { method: 'POST' }).then(carregarPessoas);
+    }
+
+    function editarLocal(span, id) {
+      const locais = ["X6", "X5", "PIAL/OFC", "VV"];
+      const currentLocal = span.textContent;
+      const select = document.createElement('select');
+      select.className = 'form-select form-select-sm';
+
+      locais.forEach(loc => {
+        const option = document.createElement('option');
+        option.value = loc;
+        option.textContent = loc;
+        if (loc === currentLocal) option.selected = true;
+        select.appendChild(option);
+      });
+
+      span.replaceWith(select);
+      select.focus();
+
+      select.onblur = () => {
+        const novoLocal = select.value;
+        fetch('/editarLocal', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ id, local: novoLocal })
+        }).then(() => {
+          carregarPessoas();
+        }).catch(() => {
+          select.replaceWith(span);
+        });
+      };
+
+      select.onkeydown = e => {
+        if (e.key === 'Enter') select.blur();
+        if (e.key === 'Escape') select.replaceWith(span);
+      };
+    }
+
+    function editarHora(span, id, campo) {
+      const textoOriginal = span.textContent.trim().slice(0, 5);
+      const input = document.createElement('input');
+      input.type = 'time';
+      input.className = 'time-edit';
+      input.value = textoOriginal;
+      span.replaceWith(input);
+      input.focus();
+
+      input.onblur = () => {
+        const novoValor = input.value + ':00';
         fetch('/editarHorario', {
           method: 'POST',
-          headers: {'Content-Type': 'application/json'},
-          body: JSON.stringify({ id: idPessoa, hora_inicio, hora_fim })
-        }).then(res => {
-          if (!res.ok) throw new Error('Erro ao salvar');
-          return res.json();
-        }).then(data => {
-          inicioEl.textContent = data.hora_inicio || '-';
-          fimEl.textContent = data.hora_fim || '-';
-          linha.querySelector('.status').textContent = data.status;
-        }).catch(err => {
-          alert('Erro ao salvar horário');
-          console.error(err);
-        });
-      }
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ id, campo, valor: novoValor })
+        }).then(() => carregarPessoas());
+      };
 
-      ativarEdicao('.hora_inicio', 'hora_inicio');
-      ativarEdicao('.hora_fim', 'hora_fim');
-    });
+      input.onkeydown = e => {
+        if (e.key === 'Enter') input.blur();
+        if (e.key === 'Escape') carregarPessoas();
+      };
+    }
+
+    carregarPessoas();
+    setInterval(carregarPessoas, 5000);
+  </script>
+
+  <script>
+    fetch('/api/version')
+      .then(res => {
+        if (!res.ok) throw new Error('Resposta não OK');
+        return res.json();
+      })
+      .then(data => {
+        const versionBadge = document.createElement('div');
+        versionBadge.textContent = `v${data.version}`;
+        Object.assign(versionBadge.style, {
+          position: 'fixed',
+          top: '6px',
+          right: '10px',
+          backgroundColor: '#888',
+          color: '#fff',
+          padding: '2px 6px',
+          fontSize: '12px',
+          borderRadius: '4px',
+          fontFamily: 'Arial, sans-serif',
+          zIndex: 9999,
+          opacity: '0.7',
+          cursor: 'default',
+          userSelect: 'none'
+        });
+        document.body.appendChild(versionBadge);
+      })
+      .catch(err => console.error('Erro ao obter versão:', err));
   </script>
 </body>
 </html>
