--- a/public/index.html
+++ b/public/index.html
@@ -1,180 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🚂 Revezamento Turma B</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Revezamento Turma B</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <style>
-    .quantidade-equipes {
-      text-align: center;
-      font-size: 0.9rem;
-      color: #555;
-      margin-top: -0.3rem;
-      margin-bottom: 1rem;
-      font-weight: 500;
+    .status {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      display: inline-block;
+      margin-right: 5px;
     }
-    .segundos {
-      font-size: 0.8em;
-      color: #888;
+    .vermelho {
+      background-color: red;
     }
-    input.time-edit {
-      width: 80px;
-      text-align: center;
+    .verde {
+      background-color: green;
+    }
+    .hora {
+      cursor: pointer;
+    }
+    .time-edit {
+      width: 60px;
       font-size: 0.9rem;
     }
   </style>
 </head>
-
 <body class="container py-4">
-  <h1 class="fw-bold logo">🚂 Revezamento Turma B</h1>
-  <p class="quantidade-equipes">Quantidade de equipes: <span id="contadorPessoas">0</span></p>
+  <h2 class="mb-4">Revezamento Turma B</h2>
 
-  <form id="formPessoa" class="mb-4">
-    <input type="text" name="nome" class="form-control" placeholder="Nome" required autocomplete="off" />
-    <select name="local" id="local" class="form-select" required>
-      <option value="" disabled selected>Selecione o local</option>
-      <option value="X6">X6</option>
-      <option value="X5">X5</option>
-      <option value="PIAL/OFC">PIAL/OFC</option>
-      <option value="VV">VV</option>
-    </select>
-    <button class="btn btn-success" type="submit">Adicionar</button>
-    <button type="button" onclick="limparDados()" class="btn btn-outline-danger">Limpar</button>
+  <form id="formPessoa" class="row g-3 mb-4">
+    <div class="col-auto">
+      <input type="text" id="nome" class="form-control" placeholder="Nome">
+    </div>
+    <div class="col-auto">
+      <button type="submit" class="btn btn-primary">Adicionar</button>
+    </div>
   </form>
 
-  <div class="table-responsive">
-    <table class="table table-bordered table-hover align-middle text-center">
-      <thead>
-        <tr>
-          <th>Status</th>
-          <th>Nome</th>
-          <th>Local</th>
-          <th>Início</th>
-          <th>Final</th>
-          <th>Ações</th>
-        </tr>
-      </thead>
-      <tbody id="tabelaCorpo"></tbody>
-    </table>
-  </div>
+  <ul id="lista" class="list-group"></ul>
 
   <script>
     function carregarPessoas() {
       fetch('/pessoas')
         .then(res => res.json())
-        .then(data => {
-          const tbody = document.getElementById('tabelaCorpo');
-          tbody.innerHTML = '';
-          document.getElementById('contadorPessoas').textContent = data.length;
+        .then(pessoas => {
+          const lista = document.getElementById('lista');
+          lista.innerHTML = '';
+          pessoas.forEach(p => {
+            const li = document.createElement('li');
+            li.className = 'list-group-item d-flex justify-content-between align-items-center flex-wrap';
 
-          function formatarHora(hora) {
-            if (!hora) return '-';
-            return hora.replace(/(\d{2}:\d{2})(:\d{2})/, "$1<span class='segundos'>$2</span>");
-          }
+            const statusClass = p.status === 'ativo' ? 'verde' : 'vermelho';
 
-          data.forEach(p => {
-            const tr = document.createElement('tr');
-
-            tr.innerHTML = `
-              <td class="status">${p.status}</td>
-              <td>${p.nome}</td>
-              <td class="${p.local === 'PIAL/OFC' ? 'local-pial-ofc' : ''}">
-                <span class="local-display" onclick="editarLocal(this, ${p.id})">${p.local}</span>
-              </td>
-              <td><span class="editable-time" onclick="editarHora(this, ${p.id}, 'hora_inicio')">${formatarHora(p.hora_inicio)}</span></td>
-              <td><span class="editable-time" onclick="editarHora(this, ${p.id}, 'hora_fim')">${formatarHora(p.hora_fim)}</span></td>
-              <td>
-                <button class="btn btn-warning btn-sm" onclick="iniciar(${p.id})">Iniciar</button>
-                <button class="btn btn-danger btn-sm" onclick="excluir(${p.id})">Excluir</button>
-              </td>
+            li.innerHTML = `
+              <div class="d-flex align-items-center mb-2 mb-md-0">
+                <span class="status ${statusClass}"></span>
+                <strong class="me-2">${p.nome}</strong>
+                <span class="hora me-2" onclick="editarHora(this, ${p.id}, 'hora_inicio')">${p.hora_inicio?.slice(0,5) || '--:--'}</span>
+                <span class="hora" onclick="editarHora(this, ${p.id}, 'hora_fim')">${p.hora_fim?.slice(0,5) || '--:--'}</span>
+              </div>
+              <div>
+                <button class="btn btn-sm btn-success me-2" onclick="iniciar(${p.id})">Iniciar</button>
+                <button class="btn btn-sm btn-danger" onclick="remover(${p.id})">Remover</button>
+              </div>
             `;
-            tbody.appendChild(tr);
+            lista.appendChild(li);
           });
         });
     }
 
-    document.getElementById('formPessoa').addEventListener('submit', e => {
-      e.preventDefault();
-      const form = new FormData(e.target);
-      fetch('/adicionar', {
-        method: 'POST',
-        body: new URLSearchParams(form)
-      }).then(() => {
-        e.target.reset();
-        carregarPessoas();
-      });
-    });
-
     function iniciar(id) {
-      fetch('/iniciar', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ id })
-      }).then(carregarPessoas);
+      fetch('/iniciar/' + id, { method: 'POST' })
+        .then(() => carregarPessoas());
     }
 
-    function excluir(id) {
-      fetch('/excluir', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ id })
-      }).then(carregarPessoas);
-    }
-
-    function limparDados() {
-      fetch('/limpar', { method: 'POST' }).then(carregarPessoas);
-    }
-
-    function editarLocal(span, id) {
-      const locais = ["X6", "X5", "PIAL/OFC", "VV"];
-      const currentLocal = span.textContent;
-      const select = document.createElement('select');
-      select.className = 'form-select form-select-sm';
-
-      locais.forEach(loc => {
-        const option = document.createElement('option');
-        option.value = loc;
-        option.textContent = loc;
-        if (loc === currentLocal) option.selected = true;
-        select.appendChild(option);
-      });
-
-      span.replaceWith(select);
-      select.focus();
-
-      select.onblur = () => {
-        const novoLocal = select.value;
-        fetch('/editarLocal', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ id, local: novoLocal })
-        }).then(() => {
-          carregarPessoas();
-        }).catch(() => {
-          select.replaceWith(span);
-        });
-      };
-
-      select.onkeydown = e => {
-        if (e.key === 'Enter') select.blur();
-        if (e.key === 'Escape') select.replaceWith(span);
-      };
+    function remover(id) {
+      fetch('/remover/' + id, { method: 'DELETE' })
+        .then(() => carregarPessoas());
     }
 
     function editarHora(span, id, campo) {
       const textoOriginal = span.textContent.trim().slice(0, 5);
       const input = document.createElement('input');
-      input.type = 'time';
+      input.type = 'text'; // ← permite digitação manual com teclado
       input.className = 'time-edit';
       input.value = textoOriginal;
       span.replaceWith(input);
       input.focus();
 
       input.onblur = () => {
-        const novoValor = input.value + ':00';
+        const novoValor = input.value.length === 5 ? input.value + ':00' : input.value;
         fetch('/editarHorario', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
@@ -188,37 +106,20 @@
       };
     }
 
-    carregarPessoas();
-    setInterval(carregarPessoas, 5000);
-  </script>
+    document.getElementById('formPessoa').addEventListener('submit', e => {
+      e.preventDefault();
+      const nome = document.getElementById('nome').value;
+      fetch('/adicionar', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ nome })
+      }).then(() => {
+        document.getElementById('nome').value = '';
+        carregarPessoas();
+      });
+    });
 
-  <script>
-    fetch('/api/version')
-      .then(res => {
-        if (!res.ok) throw new Error('Resposta não OK');
-        return res.json();
-      })
-      .then(data => {
-        const versionBadge = document.createElement('div');
-        versionBadge.textContent = `v${data.version}`;
-        Object.assign(versionBadge.style, {
-          position: 'fixed',
-          top: '6px',
-          right: '10px',
-          backgroundColor: '#888',
-          color: '#fff',
-          padding: '2px 6px',
-          fontSize: '12px',
-          borderRadius: '4px',
-          fontFamily: 'Arial, sans-serif',
-          zIndex: 9999,
-          opacity: '0.7',
-          cursor: 'default',
-          userSelect: 'none'
-        });
-        document.body.appendChild(versionBadge);
-      })
-      .catch(err => console.error('Erro ao obter versão:', err));
+    carregarPessoas();
   </script>
 </body>
 </html>
