--- a/public/index.html
+++ b/public/index.html
@@ -1,125 +1,48 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Revezamento Turma B</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sistema em Manutenção</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
-    .status {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      display: inline-block;
-      margin-right: 5px;
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #202020, #2c3e50);
+      font-family: 'Roboto', sans-serif;
+      color: #fff;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
     }
-    .vermelho {
-      background-color: red;
+
+    .container {
+      max-width: 600px;
+      padding: 20px;
+      border: 1px solid #444;
+      border-radius: 10px;
+      background-color: rgba(0, 0, 0, 0.6);
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
     }
-    .verde {
-      background-color: green;
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
     }
-    .hora {
-      cursor: pointer;
-    }
-    .time-edit {
-      width: 60px;
-      font-size: 0.9rem;
+
+    p {
+      font-size: 1.2rem;
+      color: #ccc;
     }
   </style>
 </head>
-<body class="container py-4">
-  <h2 class="mb-4">Revezamento Turma B</h2>
-
-  <form id="formPessoa" class="row g-3 mb-4">
-    <div class="col-auto">
-      <input type="text" id="nome" class="form-control" placeholder="Nome">
-    </div>
-    <div class="col-auto">
-      <button type="submit" class="btn btn-primary">Adicionar</button>
-    </div>
-  </form>
-
-  <ul id="lista" class="list-group"></ul>
-
-  <script>
-    function carregarPessoas() {
-      fetch('/pessoas')
-        .then(res => res.json())
-        .then(pessoas => {
-          const lista = document.getElementById('lista');
-          lista.innerHTML = '';
-          pessoas.forEach(p => {
-            const li = document.createElement('li');
-            li.className = 'list-group-item d-flex justify-content-between align-items-center flex-wrap';
-
-            const statusClass = p.status === 'ativo' ? 'verde' : 'vermelho';
-
-            li.innerHTML = `
-              <div class="d-flex align-items-center mb-2 mb-md-0">
-                <span class="status ${statusClass}"></span>
-                <strong class="me-2">${p.nome}</strong>
-                <span class="hora me-2" onclick="editarHora(this, ${p.id}, 'hora_inicio')">${p.hora_inicio?.slice(0,5) || '--:--'}</span>
-                <span class="hora" onclick="editarHora(this, ${p.id}, 'hora_fim')">${p.hora_fim?.slice(0,5) || '--:--'}</span>
-              </div>
-              <div>
-                <button class="btn btn-sm btn-success me-2" onclick="iniciar(${p.id})">Iniciar</button>
-                <button class="btn btn-sm btn-danger" onclick="remover(${p.id})">Remover</button>
-              </div>
-            `;
-            lista.appendChild(li);
-          });
-        });
-    }
-
-    function iniciar(id) {
-      fetch('/iniciar/' + id, { method: 'POST' })
-        .then(() => carregarPessoas());
-    }
-
-    function remover(id) {
-      fetch('/remover/' + id, { method: 'DELETE' })
-        .then(() => carregarPessoas());
-    }
-
-    function editarHora(span, id, campo) {
-      const textoOriginal = span.textContent.trim().slice(0, 5);
-      const input = document.createElement('input');
-      input.type = 'text'; // ← permite digitação manual com teclado
-      input.className = 'time-edit';
-      input.value = textoOriginal;
-      span.replaceWith(input);
-      input.focus();
-
-      input.onblur = () => {
-        const novoValor = input.value.length === 5 ? input.value + ':00' : input.value;
-        fetch('/editarHorario', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ id, campo, valor: novoValor })
-        }).then(() => carregarPessoas());
-      };
-
-      input.onkeydown = e => {
-        if (e.key === 'Enter') input.blur();
-        if (e.key === 'Escape') carregarPessoas();
-      };
-    }
-
-    document.getElementById('formPessoa').addEventListener('submit', e => {
-      e.preventDefault();
-      const nome = document.getElementById('nome').value;
-      fetch('/adicionar', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ nome })
-      }).then(() => {
-        document.getElementById('nome').value = '';
-        carregarPessoas();
-      });
-    });
-
-    carregarPessoas();
-  </script>
+<body>
+  <div class="container">
+    <h1>🛠️ Sistema em Manutenção</h1>
+    <p>Estamos realizando testes e melhorias. Por favor, volte em breve.</p>
+  </div>
 </body>
 </html>
