--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,11 @@
       </svg>
     </div>
   </div>
+  <audio autoplay loop>
+  <source src="../Madonna - La Isla Bonita (Official Video).mp3" type="audio/mpeg" />
+  Seu navegador não suporta o elemento de áudio.
+</audio>
+
 
   <script>
     function atualizarRelogio() {
