--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dashboard - Revezamento Turma B</title>
+  <title>Dashboard B</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
@@ -30,17 +30,9 @@
       font-weight: bold;
     }
 
-    .status-pendente {
-      color: #f44336;
-    }
-
-    .status-concluido {
-      color: #4caf50;
-    }
-
-    .status-andamento {
-      color: #ffeb3b;
-    }
+    .status-pendente { color: #f44336; }
+    .status-concluido { color: #4caf50; }
+    .status-andamento { color: #ffeb3b; }
 
     .progress-bar {
       height: 20px;
@@ -115,58 +107,283 @@
         font-size: 1.5rem;
       }
     }
+    <style>
+  body {
+    font-family: 'Roboto', sans-serif;
+    background: #f4f7fc;
+    padding-top: 50px;
+  }
+
+  .dashboard-card {
+    background: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    margin-bottom: 20px;
+    transition: transform 0.3s ease;
+  }
+
+  .dashboard-card:hover {
+    transform: translateY(-5px);
+  }
+
+  .status {
+    font-size: 1.3rem;
+    font-weight: bold;
+  }
+
+  .status-pendente { color: #f44336; }
+  .status-concluido { color: #4caf50; }
+  .status-andamento { color: #ffeb3b; }
+
+  .progress-bar {
+    height: 20px;
+  }
+
+  .table th, .table td {
+    vertical-align: middle;
+  }
+
+  .table-bordered {
+    border: 2px solid #ddd;
+  }
+
+  .table-hover tbody tr:hover {
+    background-color: #f9f9f9;
+  }
+
+  /* Torna a tabela scrollável horizontalmente em telas pequenas */
+  .table-responsive {
+    overflow-x: auto;
+  }
+
+  .header {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #333;
+  }
+
+  .dashboard-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+    flex-wrap: wrap; /* Para quebrar linha em telas pequenas */
+  }
+
+  .btn-back {
+    font-size: 1.1rem;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: #4caf50;
+    color: #fff;
+    border: none;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    margin-top: 10px; /* Dá espaço em telas pequenas */
+  }
+
+  .btn-back:hover {
+    background-color: #45a049;
+  }
+
+  .card-title {
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+  }
+
+  .card-body {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap; /* Para melhor encaixe em telas pequenas */
+    gap: 10px;
+  }
+
+  /* Ajustes para telas até 768px (tablets e celulares) */
+  @media (max-width: 768px) {
+    .dashboard-card {
+      padding: 20px;
+    }
+
+    .status {
+      font-size: 1rem;
+    }
+
+    .btn-back {
+      font-size: 1rem;
+      padding: 8px 15px;
+      width: 100%; /* Botão ocupa toda a linha */
+      text-align: center;
+      margin-top: 15px;
+    }
+
+    .header {
+      font-size: 1.5rem;
+      width: 100%; /* Header ocupa linha inteira */
+      text-align: center;
+      margin-bottom: 15px;
+    }
+
+    .dashboard-header {
+      justify-content: center;
+    }
+
+    /* Cards ficam 100% largura empilhados */
+    .row > [class*='col-md-4'] {
+      flex: 0 0 100%;
+      max-width: 100%;
+      margin-bottom: 15px;
+    }
+
+    /* Linha dos gráficos empilhados */
+    .row > [class*='col-md-6'] {
+      flex: 0 0 100%;
+      max-width: 100%;
+      margin-bottom: 20px;
+    }
+
+    /* Ajuste no card-body para ficar mais compacto */
+    .card-body {
+      justify-content: center;
+      gap: 5px;
+    }
+  }
+  @media (max-width: 500px) {
+  table.table tbody tr td,
+  table.table thead tr th {
+    padding: 4px 6px;         /* Menos espaçamento */
+    font-size: 0.75rem;       /* Fonte menor */
+  }
+  
+  /* Permitir scroll horizontal se necessário */
+  .table-responsive {
+    overflow-x: auto;
+  }
+   .btn-back {
+    font-size: 1.1rem;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: #4caf50;
+    color: #fff;
+    border: none;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .btn-back:hover {
+    background-color: #45a049;
+  }
+
+  /* Abaixo de 500px: botão pequeno com só o símbolo */
+  @media (max-width: 500px) {
+    .btn-back {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      width: 40px;
+      height: 40px;
+      padding: 0;
+      font-size: 24px;
+      border-radius: 50%;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    }
+    .btn-back::before {
+      content: "←";
+      color: white;
+      font-weight: bold;
+      line-height: 1;
+    }
+    /* Esconde texto interno */
+    .btn-back > span,
+    .btn-back > * {
+      display: none;
+    }
+  }
+  @keyframes pulseGreenScale {
+  0%, 100% {
+    color: #4caf50;
+    transform: scale(1);
+  }
+  50% {
+    color: #81c784; /* verde mais claro para dar efeito de brilho */
+    transform: scale(1.1);
+  }
+}
+
+.header {
+  animation: pulseGreenScale 2.5s ease-in-out infinite;
+  font-weight: 700;
+  user-select: none;
+  cursor: default;
+  display: inline-block; /* necessário para aplicar transform */
+  transition: color 0.3s ease;
+}
+.header:hover {
+  animation-play-state: paused;
+}
+
+}
+
+</style>
+
   </style>
 </head>
 <body>
 
   <div class="container">
     <div class="dashboard-header">
-      <h1 class="header">Dashboard - Revezamento Turma B</h1>
-      <a href="app.html" class="btn-back">Voltar</a>
+      
+      <h1 class="header">Revezamento Turma B</h1>
+      <a href="app.html" class="btn-back" aria-label="Voltar"></a></a>
     </div>
 
     <div class="row">
-      <!-- Total de Pessoas -->
-      <div class="col-md-4">
-        <div class="dashboard-card">
-          <p class="card-title">Total de Pessoas</p>
-          <div class="card-body">
-            <span class="status">Total: <span id="totalPessoas">0</span></span>
-            <div class="progress w-50">
-              <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Pendente -->
-      <div class="col-md-4">
-        <div class="dashboard-card">
-          <p class="card-title">Pessoas Pendentes</p>
-          <div class="card-body">
-            <span class="status status-pendente">Pendente: <span id="pendente">0</span></span>
-            <div class="progress w-50">
-              <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <!-- Concluído -->
       <div class="col-md-4">
         <div class="dashboard-card">
-          <p class="card-title">Pessoas Concluídas</p>
+          <p class="card-title">Concluídas</p>
           <div class="card-body">
-            <span class="status status-concluido">Concluído: <span id="concluido">0</span></span>
+            <span class="status status-concluido">✅ <span id="concluido">0</span></span>
             <div class="progress w-50">
-              <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-success" role="progressbar" style="width: 0%" id="barConcluido"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Em Andamento -->
+      <div class="col-md-4">
+        <div class="dashboard-card">
+          <p class="card-title">Em Andamento</p>
+          <div class="card-body">
+            <span class="status status-andamento">🟡 <span id="andamento">0</span></span>
+            <div class="progress w-50">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 0%" id="barAndamento"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Pendentes -->
+      <div class="col-md-4">
+        <div class="dashboard-card">
+          <p class="card-title">Pendentes</p>
+          <div class="card-body">
+            <span class="status status-pendente">🔴 <span id="pendente">0</span></span>
+            <div class="progress w-50">
+              <div class="progress-bar bg-danger" role="progressbar" style="width: 0%" id="barPendente"></div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Tabela de Pessoas por Status -->
+    <!-- Tabela de Pessoas -->
     <div class="dashboard-card">
       <h3>Pessoas Ordenadas por hora</h3>
       <table class="table table-bordered table-hover">
@@ -174,69 +391,121 @@
           <tr>
             <th>Status</th>
             <th>Nome</th>
+            <th>Local</th>
             <th>Início</th>
             <th>Final</th>
           </tr>
         </thead>
-        <tbody id="tabelaDashboard">
-          <!-- Dados carregados via JavaScript -->
-        </tbody>
+        <tbody id="tabelaDashboard"></tbody>
       </table>
+    </div>
+
+    <!-- GRÁFICOS -->
+    <div class="row">
+      <!-- Gráfico de Status -->
+      <div class="col-md-6">
+        <div class="dashboard-card w-100 h-100">
+          <h3 class="text-center">Distribuição por Status</h3>
+          <canvas id="graficoStatus" height="250"></canvas>
+        </div>
+      </div>
+
+      <!-- Gráfico por Local -->
+      <div class="col-md-6">
+        <div class="dashboard-card w-100 h-100">
+          <h3 class="text-center">Pessoas por Local</h3>
+          <canvas id="graficoLocais" height="250"></canvas>
+        </div>
+      </div>
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     function carregarDashboard() {
       fetch('/pessoas')
         .then(res => res.json())
         .then(data => {
-          const totalPessoas = data.length;
           const pendente = data.filter(p => p.status === '🔴').length;
+          const andamento = data.filter(p => p.status === '🟡').length;
           const concluido = data.filter(p => p.status === '✅').length;
+          const total = data.length;
 
-          // Atualiza as informações de total, pendente e concluído
-          document.getElementById('totalPessoas').textContent = totalPessoas;
           document.getElementById('pendente').textContent = pendente;
+          document.getElementById('andamento').textContent = andamento;
           document.getElementById('concluido').textContent = concluido;
 
-          // Atualiza as barras de progresso
-          const totalProgress = (totalPessoas / totalPessoas) * 100;
-          const pendenteProgress = (pendente / totalPessoas) * 100;
-          const concluidoProgress = (concluido / totalPessoas) * 100;
+          document.getElementById('barPendente').style.width = (pendente / total * 100 || 0) + '%';
+          document.getElementById('barAndamento').style.width = (andamento / total * 100 || 0) + '%';
+          document.getElementById('barConcluido').style.width = (concluido / total * 100 || 0) + '%';
 
-          document.querySelector('.progress-bar').style.width = `${totalProgress}%`;
-          document.querySelectorAll('.progress-bar')[1].style.width = `${pendenteProgress}%`;
-          document.querySelectorAll('.progress-bar')[2].style.width = `${concluidoProgress}%`;
-
-          // Ordena as pessoas pela hora de conclusão (primeiro as concluídas)
-          const pessoasOrdenadas = data.sort((a, b) => {
-            if (a.status === '✅' && b.status !== '✅') return -1;
-            if (b.status === '✅' && a.status !== '✅') return 1;
-            return 0;
-          });
-
-          // Preenche a tabela
+          // Tabela
           const tbody = document.getElementById('tabelaDashboard');
           tbody.innerHTML = '';
-
-          pessoasOrdenadas.forEach(pessoa => {
+          data.sort((a, b) => {
+            const [ha, ma] = (a.hora_inicio || '99:99').split(':');
+            const [hb, mb] = (b.hora_inicio || '99:99').split(':');
+            return (+ha * 60 + +ma) - (+hb * 60 + +mb);
+          }).forEach(p => {
             const tr = document.createElement('tr');
             tr.innerHTML = `
-              <td class="status ${pessoa.status === '🔴' ? 'status-pendente' : pessoa.status === '✅' ? 'status-concluido' : 'status-andamento'}">${pessoa.status}</td>
-              <td>${pessoa.nome}</td>
-              <td>${pessoa.hora_inicio || '-'}</td>
-              <td>${pessoa.hora_fim || '-'}</td>
+              <td class="status ${p.status === '🔴' ? 'status-pendente' : p.status === '🟡' ? 'status-andamento' : 'status-concluido'}">${p.status}</td>
+              <td>${p.nome}</td>
+              <td>${p.local || '-'}</td>
+              <td>${p.hora_inicio || '-'}</td>
+              <td>${p.hora_fim || '-'}</td>
             `;
             tbody.appendChild(tr);
           });
-        })
-        .catch(err => {
-          console.error('Erro ao carregar as pessoas:', err);
+
+          // Gráficos
+          gerarGraficos(data);
         });
     }
 
-    // Carrega as informações ao carregar a página
+    function gerarGraficos(data) {
+      const statusContagem = { '🔴': 0, '🟡': 0, '✅': 0 };
+      const locais = {};
+
+      data.forEach(p => {
+        if (statusContagem[p.status] !== undefined) statusContagem[p.status]++;
+        if (p.local) locais[p.local] = (locais[p.local] || 0) + 1;
+      });
+
+      // Gráfico Status
+      new Chart(document.getElementById('graficoStatus'), {
+        type: 'doughnut',
+        data: {
+          labels: ['🔴 Pendentes', '🟡 Em Andamento', '✅ Concluídas'],
+          datasets: [{
+            data: [statusContagem['🔴'], statusContagem['🟡'], statusContagem['✅']],
+            backgroundColor: ['#f44336', '#ffeb3b', '#4caf50']
+          }]
+        },
+        options: { responsive: true, plugins: { legend: { position: 'bottom' } } }
+      });
+
+      // Gráfico Locais
+      new Chart(document.getElementById('graficoLocais'), {
+        type: 'bar',
+        data: {
+          labels: Object.keys(locais),
+          datasets: [{
+            label: 'Pessoas por Local',
+            data: Object.values(locais),
+            backgroundColor: '#2196f3'
+          }]
+        },
+        options: {
+          responsive: true,
+          plugins: { legend: { display: false } },
+          scales: { y: { beginAtZero: true, ticks: { precision: 0 } } }
+        }
+      });
+    }
+
     document.addEventListener('DOMContentLoaded', carregarDashboard);
   </script>
+
 </body>
 </html>
