--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
   <title>Login - Revezamento Turma B</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
-    /* Estilos Globais */
     body {
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(135deg, #1f1c2c, #928DAB);
+      background: linear-gradient(135deg, #0d0d0d, #1a1a2e);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -18,13 +18,39 @@
       margin: 0;
       color: #fff;
       text-align: center;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .contato-topo {
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      display: flex;
+      align-items: center;
+      background-color: rgba(0, 255, 255, 0.05);
+      padding: 6px 10px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 255, 255, 0.2);
+      font-size: 0.9rem;
+    }
+
+    .contato-topo i {
+      font-size: 1.2rem;
+      color: #25D366;
+      margin-right: 8px;
+    }
+
+    .contato-topo span {
+      color: #ccc;
     }
 
     h1 {
       font-size: 2.8rem;
       font-weight: 700;
-      color: #fff;
-      margin-bottom: 1.5rem;
+      color: #00f6ff;
+      margin-bottom: 1.2rem;
+      text-shadow: 0 0 8px #00f6ff;
     }
 
     .btn-login {
@@ -33,19 +59,22 @@
       border-radius: 30px;
       margin: 10px;
       width: auto;
-      transition: background-color 0.3s ease;
+      transition: all 0.3s ease;
+      box-shadow: 0 0 12px rgba(0, 255, 255, 0.4);
     }
 
-    .btn-login:hover {
-      background-color: #f15bb5;
-      border-color: #f15bb5;
+    .btn-login:hover:enabled {
+      background-color: #00f6ff;
+      color: #000;
+      border-color: #00f6ff;
+      box-shadow: 0 0 20px #00f6ff;
     }
 
     #loginAdminForm {
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(20, 20, 40, 0.85);
       border-radius: 12px;
       padding: 2rem;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 10px 40px rgba(0, 255, 255, 0.2);
       max-width: 360px;
       width: 100%;
       margin-top: 1.5rem;
@@ -54,7 +83,7 @@
     }
 
     #loginAdminForm label {
-      font-weight: 449;
+      font-weight: 500;
       color: #ccc;
       margin-bottom: 10px;
       display: block;
@@ -67,14 +96,15 @@
       width: 100%;
       border: none;
       margin-bottom: 14px;
-      background: #333;
-      color: #fff;
-      box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.1);
+      background: #222;
+      color: #00f6ff;
+      box-shadow: inset 0 4px 6px rgba(0, 255, 255, 0.1);
     }
 
     #loginAdminForm input:focus {
-      background: #444;
+      background: #333;
       outline: none;
+      box-shadow: 0 0 8px #00f6ff;
     }
 
     #loginError {
@@ -84,7 +114,25 @@
       display: none;
     }
 
-    /* Responsividade */
+    .logo-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 1rem;
+    }
+
+    .logo-container img {
+      width: 120px;
+      filter: drop-shadow(0 0 10px rgba(0, 255, 255, 0.7));
+    }
+
+    .logo-reflect {
+      transform: scaleY(-1);
+      opacity: 0.25;
+      margin-top: -20px;
+      filter: blur(2px);
+    }
+
     @media (max-width: 480px) {
       h1 {
         font-size: 2rem;
@@ -99,26 +147,59 @@
         padding: 1.5rem;
         max-width: 280px;
       }
+
+      .logo-container img {
+        width: 90px;
+      }
+
+      .contato-topo {
+        font-size: 0.8rem;
+        padding: 4px 8px;
+      }
+
+      .contato-topo i {
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
 <body>
+  <!-- WhatsApp Topo Esquerdo -->
+  <div class="contato-topo">
+  <a href="https://wa.me/5598985761913?text=Ol%C3%A1!%20O%20motivo%20da%20mensagem%20%C3%A9%20sobre%20o%20sistema%20de%20revezamento%2C%20sugest%C3%B5es%20ou%20melhorias." target="_blank" style="display: flex; align-items: center; text-decoration: none;">
+    <i class="fab fa-whatsapp"></i>
+    <span>Sugestões ou melhorias? Envie uma mensagem!</span>
+  </a>
+</div>
+
+
   <div>
+    <div class="logo-container">
+      <img src="vale-removebg-preview.png" alt="Logo Vale" />
+      <img src="vale-removebg-preview.png" class="logo-reflect" alt="Reflexo Logo" />
+    </div>
+
     <h1>Revezamento Turma B</h1>
 
-    <div class="d-flex justify-content-center">
-      <button id="btnAdm" class="btn btn-login btn-outline-light">Entrar como ADM</button>
-      <button id="btnUser" class="btn btn-login btn-outline-info">Entrar Normal</button>
+    <div class="alert alert-info text-start shadow mt-3" style="max-width: 500px; margin: 0 auto; border-left: 5px solid #00f6ff; background-color: rgba(0, 255, 255, 0.05); color: #ccf;">
+      <strong>📢 Aviso importante:</strong><br>
+      A partir do dia <strong>11/08/2025</strong>, o acesso ao sistema será feito por <strong>senha única</strong>, sendo uma para <strong>a equipe</strong> e outra para <strong>administradores</strong>.<br>
+      Agradecemos a compreensão e colaboração de todos. 🙏
+    </div>
+
+    <div class="d-flex justify-content-center flex-wrap">
+      <button id="btnAdm" class="btn btn-login btn-danger" disabled>ADM</button>
+      <button id="btnUser" class="btn btn-login btn-outline-info">Equipe</button>
     </div>
 
     <button id="btnLogout" class="btn btn-login btn-outline-danger" style="display:none;">Logout</button>
 
-    <form id="loginAdminForm" class="mt-3" autocomplete="off">
+    <form id="loginAdminForm" class="mt-3" autocomplete="off" style="display: none;">
       <div class="mb-3">
         <label for="senha" class="form-label">Senha ADM</label>
         <input type="password" id="senha" class="form-control" placeholder="Digite a senha" required />
       </div>
-      <div id="loginError" class="text-danger mb-2" style="display:none;"></div>
+      <div id="loginError" class="text-danger mb-2"></div>
       <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
   </div>
@@ -129,16 +210,16 @@
     const btnLogout = document.getElementById('btnLogout');
     const loginAdminForm = document.getElementById('loginAdminForm');
     const loginError = document.getElementById('loginError');
+    const senhaInput = document.getElementById('senha');
 
     async function checkAdmin() {
       try {
         const res = await fetch('/checkAdmin', { credentials: 'include' });
         const data = await res.json();
-        if (data.isAdmin) {
+        if (data.isAdmin || data.isEquipe) {
           btnAdm.style.display = 'none';
           btnUser.style.display = 'none';
           btnLogout.style.display = 'inline-block';
-          loginAdminForm.style.display = 'none';
         } else {
           btnAdm.style.display = 'inline-block';
           btnUser.style.display = 'inline-block';
@@ -153,62 +234,34 @@
 
     checkAdmin();
 
-    btnAdm.addEventListener('click', () => {
-      if (loginAdminForm.style.display === 'block') {
-        loginAdminForm.style.display = 'none';
-        loginError.style.display = 'none';
-      } else {
-        loginAdminForm.style.display = 'block';
-        loginError.style.display = 'none';
-        document.getElementById('senha').value = '';
-        document.getElementById('senha').focus();
-      }
-    });
-
-    btnUser.addEventListener('click', () => {
-      window.location.href = 'app.html';
-    });
-
-    loginAdminForm.addEventListener('submit', async e => {
-      e.preventDefault();
-      const senha = document.getElementById('senha').value.trim();
-
+    btnUser.addEventListener('click', async () => {
       try {
         const res = await fetch('/login', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           credentials: 'include',
-          body: JSON.stringify({ senha })
+          body: JSON.stringify({ senha: 'Min@Vale', tipo: 'equipe' })
         });
 
         if (!res.ok) {
           const data = await res.json();
-          loginError.textContent = data.erro || 'Erro no login';
-          loginError.style.display = 'block';
-          document.getElementById('senha').focus();
+          alert(data.erro || 'Erro no login da equipe');
           return;
         }
 
         btnAdm.style.display = 'none';
         btnUser.style.display = 'none';
         btnLogout.style.display = 'inline-block';
-        loginAdminForm.style.display = 'none';
-        loginError.style.display = 'none';
-
-        window.location.href = 'app.html?adm=1';
+        window.location.href = 'app.html?equipe=1';
       } catch (error) {
-        loginError.textContent = 'Erro de comunicação com o servidor';
-        loginError.style.display = 'block';
-        document.getElementById('senha').focus();
+        alert('Erro de comunicação com o servidor');
       }
     });
 
     btnLogout.addEventListener('click', async () => {
       try {
         await fetch('/logout', { method: 'POST', credentials: 'include' });
-      } catch {
-        // ignore erros
-      }
+      } catch {}
       location.reload();
     });
   </script>
